Adicionar Links do Rodapé e Renomear TTítulo da Página

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <figure>
                 <img src="./imagens/positivo-logo.png" alt="logo da positivo" width="100px">
             </figure>
-            <h1>Positivo Tecnologia</h1>
+            <h1>Positivo</h1>
             <nav>
                 <ul>
                     <li>
@@ -104,7 +104,15 @@
         </main>
 
         <footer>
-            &copy;2025
+            &copy; 2025 Positivo Tecnologia. Todos os Direitos Reservados.
+
+            <ul>
+                <li><a target="_blank" href="https://facebook.com">Facebook</a></li>
+            </ul>
+
+            <ul>
+                <li><a target="_blank" href="https:/instagram.com">Instagram</a></li>
+            </ul>
         </footer>
     </body>
 </html>
