Adicionar Paginas Extras

--- a/contato.html
+++ b/contato.html
@@ -31,11 +31,80 @@
         </header>
 
         <main>
+            <h1>Entre em Contato</h1>
 
+            <p>
+                 Fale conosco, tire suas dúvidas ou envie sugestões. Estamos
+                prontos para te atender!
+            </p>
+
+            <dl>
+                <dt><b>Endereço:</b></dt>
+                <dd>
+                    <address>Rua Positivo, 123 - Curitiba, PR, Brasil - CEP 81234-567</address>
+                </dd>
+            </dl>
+
+            <dl>
+                <dt><b>Telefone (Suporte ao Cliente):</b></dt>
+                <dd>
+                    <a href="tel:+551140028922">+55 11 4002-8922</a>
+                </dd>
+            </dl>
+
+            <dl>
+                <dt><b>Horário de Atendimento:</b></dt>
+                <dd>Segunda a Sexta, das 8h às 18h.</dd>
+            </dl>
+
+            <section>
+                <h2>Mande uma Mensagem</h2>
+
+                <form action="">
+                    <fieldset>
+                        <legend>Identificação</legend>
+                        <label for="nome">Nome Completo:</label>
+                        <input type="text" name="nome" id="nome" placeholder="Digite o Seu Nome...">
+
+                        <br>
+                        <br>
+
+                        <label for="email">Seu E-mail:</label>
+                        <input type="email" name="email" id="email" placeholder="Digite o Seu E-mail">
+                    </fieldset>
+                    
+                    <br>
+
+                    <fieldset>
+                        <legend>Mensagem</legend>
+
+                        <label for="assunto">Assunto:</label>
+                        <input type="text" name="assunto" id="assunto" placeholder="Digite o Assunto para falar...">
+
+                        <br>
+                        <br>
+
+                        <label for="mensagem">Mensagem</label>
+                        <textarea name="mensagem" id="mensagem" placeholder="Sua Mensagem..." maxlength="300" rows="8"></textarea>
+
+                        <br>
+
+                        <button type="submit">Enviar</button>
+                    </fieldset>
+                </form>
+            </section>
         </main>
 
         <footer>
+            &copy; 2025 Positivo Tecnologia. Todos os Direitos Reservados.
 
+            <ul>
+                <li><a target="_blank" href="https://facebook.com">Facebook</a></li>
+            </ul>
+
+            <ul>
+                <li><a target="_blank" href="https:/instagram.com">Instagram</a></li>
+            </ul>
         </footer>
     </body>
 </html>
