--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
 
         <main>
 
-            <section>
+            <section id="historia">
                 <h2>Sobre a Positivo</h2>
                 <p>
                     Nascida em 1989 com a missão de produzir computadores no Brasil, a
@@ -45,7 +45,7 @@
                 </p>
             </section>
 
-            <section>
+            <section id="Valores">
                 <h2>Nossos Valores</h2>
 
                 <ul>
@@ -67,7 +67,17 @@
             <section>
                 <h2>Conheça Mais</h2>
 
-                
+                <video controls>
+                    <source src="./midia/institucional-pt-br.mp4">
+                </video>
+
+                <video controls>
+                    <source src="./midia/institucional-2-pt-br.mp4">
+                </video>
+
+                <audio controls>
+                    <source src="./midia/Positivo Tecnologia. A inovação que você vive..mp3">
+                </audio>
             </section>
         </main>
 
